# hcc

./: .gitignore  CMakeLists.txt  README.md
examples/: general_test.hc
include/hcc/: lexer.h  parser.h  string.h
src/: lexer.c  lexer_util.c  main.c  parser.c  parser_util.c  string.c
